--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>jhtml5player</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/src/jhtml5player.js"></script>
-    <script type="text/javascript" src="/src/skin/gray/jhtml5player.skin.gray.js"></script>
+    <script type="text/javascript" src="src/jhtml5player.js"></script>
+    <script type="text/javascript" src="src/skin/gray/jhtml5player.skin.gray.js"></script>
     <script type="text/javascript">
 var player_config = {
 
