add webm source for firefox

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ var player_config = {
         width: 640,
         height: 360,
         poster: 'http://mozorg.cdn.mozilla.net/media/img/firefox/video/poster-brand.jpg',
-        src: ['http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4'],
+        src: ['http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4', 'http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm'],
     },
 
     control_bar: {
