--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $(function() {
 </head>
 <body>
     <div style="display:block;width:760px;margin:0 auto;padding:0;">
-        <div><p><a href="https://github.com/michaelliao/jhtml5player" target="_blank">jhtml5player</a></p></div>
+        <div><p><a href="https://github.com/michaelliao/jhtml5player" target="_blank">jhtml5player on GitHub</a></p></div>
         <div>
             <div id="test-player"></div>
         </div>
